--- a/authors/templates/user_profile.html
+++ b/authors/templates/user_profile.html
@@ -1,98 +1,59 @@
-{% extends "books/base.html" %}
-
-{% load static %}
-
-{% block content %}
-
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="card">
-        <div class="card-header">
-          <h2>Welcome, {{ user.username | capfirst }}</h2>
+{% extends "books/base.html" %} {% load static %} {% block content %}
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="card">
+          <div class="card-header">
+            <h2>Welcome, {{ user.username | capfirst }}</h2>
+          </div>
+          <div class="text-center mx-auto pt-3">
+            {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
+              <img src="{{ user.userprofile.profile_image.url }}" id="profileImagePreview" alt="Profile Image"
+                   class="rounded-circle mx-auto d-block img-fluid"/> {% else %}
+              <img src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp" alt="Profile Image Default"
+                   id="profileImagePreview" class="rounded-circle d-block img-fluid"/> {% endif %} </div>
+          <div class="container pt-3">
+            <p>
+              <span class="fw-bold">Username:</span> {{ user.username }}
+            </p>
+            <p>
+              <span class="fw-bold">Email:</span> {{ user.email }}
+            </p>
+          </div>
+          <div class="card-footer text-center">
+            <a href="{% url 'update_profile' %}" class="btn btn-primary">Update Profile</a>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteProfileModal">
+              Delete Profile
+            </button>
+          </div>
         </div>
-        <div class="text-center mx-auto pt-3">
-          {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url%}
-          <img
-            src="{{ user.userprofile.profile_image.url }}"
-            id="profileImagePreview"
-            alt="Profile Image"
-            class="rounded-circle mx-auto d-block img-fluid"
-          />
-          {% else %}
-          <img
-            src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
-            alt="Profile Image Default"
-            id="profileImagePreview"
-            class="rounded-circle d-block img-fluid"
-          />
-          {% endif %}
-        </div>
-        <div class="container pt-3">
-          <p><span class="fw-bold">Username:</span> {{ user.username }}</p>
-          <p><span class="fw-bold">Email:</span> {{ user.email }}</p>
-        </div>
-        <div class="card-footer text-center">
-          <a href="{% url 'update_profile' %}" class="btn btn-primary">Update Profile</a>
-          <button
-            type="button"
-            class="btn btn-danger"
-            data-bs-toggle="modal"
-            data-bs-target="#deleteProfileModal">
-            Delete Profile
+      </div>
+    </div>
+  </div>
+  <!-- Delete Profile Modal -->
+  <div class="modal fade" id="deleteProfileModal" tabindex="-1" role="dialog" aria-labelledby="deleteProfileModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteProfileModalLabel"> Confirm Profile Deletion </h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
           </button>
         </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete your profile?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            <!-- Correct Bootstrap 5 attribute --> Cancel
+          </button>
+          <!-- Button profile deletion trigger  -->
+          <form method="post" action="{% url 'delete_profile' %}"> {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-
-<!-- Delete Profile Modal -->
-<div
-  class="modal fade"
-  id="deleteProfileModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="deleteProfileModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="deleteProfileModalLabel">
-          Confirm Profile Deletion
-        </h5>
-        <button
-          type="button"
-          class="close"
-          data-bs-dismiss="modal"
-          aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to delete your profile?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">  <!-- Correct Bootstrap 5 attribute -->
-          Cancel
-        </button>
-
-        <!-- Button profile deletion trigger  -->
-        <form method="post" action="{% url 'delete_profile' %}">
-          {% csrf_token %}
-          <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
-
-      </div>
-    </div>
-  </div>
-</div>
-
-{% endblock %}
-
-{% block script %}
-
-  <script src="{% static 'js/profile.js' %}"></script>
-
-
-{% endblock %}
+  </div> {% endblock %} {% block script %}
+  <script src="{% static 'js/profile.js' %}"></script> {% endblock %}
