--- a/authors/templates/authentication/login.html
+++ b/authors/templates/authentication/login.html
@@ -1,28 +1,24 @@
-{% extends 'books/base.html' %}
-
-{% load static %}
-
-{% block content %}
-
-<div class="container mt-5 col-9 col-md-6 col-lg-4">
+{% extends 'books/base.html' %} {% load static %} {% block content %}
+  <div class="container mt-5 col-9 col-md-6 col-lg-4">
     <div class="text-center">
-        <h2>Login</h2>
+      <h2>Login</h2>
     </div>
-
     <div id="loginForm" class="form-container mt-3">
-        <form action="" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="form_type" value="login">
-            <div class="mb-3">
-                <input type="text" class="form-control" id="loginUsernameEmail" placeholder="User Name or E-mail (required)" name="username_or_email" required>
-            </div>
-            <div class="mb-3">
-                <input type="password" class="form-control" id="loginPassword" placeholder="Pasword (required)" name="password" required>
-            </div>
-            
-            <p><button type="submit" class="btn btn-primary"> Login</button>  Don't have an account? Click <a class ="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{% url 'register' %}">here</a>.</p>
-        </form>
+      <form action="" method="POST"> {% csrf_token %} <input type="hidden" name="form_type" value="login">
+        <div class="mb-3">
+          <input type="text" class="form-control" id="loginUsernameEmail" placeholder="User Name or E-mail (required)"
+                 name="username_or_email" required>
+        </div>
+        <div class="mb-3">
+          <input type="password" class="form-control" id="loginPassword" placeholder="Pasword (required)"
+                 name="password" required>
+        </div>
+        <p>
+          <button type="submit" class="btn btn-primary"> Login</button>
+          Don't have an account? Click <a
+            class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+            href="{% url 'register' %}">here</a>.
+        </p>
+      </form>
     </div>
-</div>
-
-{% endblock %}
+  </div> {% endblock %}
