--- a/authors/templates/contact.html
+++ b/authors/templates/contact.html
@@ -1,62 +1,42 @@
-{% extends 'books/base.html' %}
-
-{% load static %}
-
-{% block head %}
-
-    <!-- EmailJS -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script>
-        (function() {
-            emailjs.init('jF0IEklCsgp1doOjY');
-        })();
-    </script>
-
-{% endblock %}
-
-{% block content %}
-
-<div class="container mt-5 col-9 col-md-6 col-lg-4">
+{% extends 'books/base.html' %} {% load static %} {% block head %}
+  <!-- EmailJS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+      (function () {
+          emailjs.init('jF0IEklCsgp1doOjY');
+      })();
+  </script> {% endblock %} {% block content %}
+  <div class="container mt-5 col-9 col-md-6 col-lg-4">
     <div class="text-center">
-        <h2>Contact Us</h2>
+      <h2>Contact Us</h2>
     </div>
     <div id="contactForm" class="form-container mt-3">
-        <form id="emailForm" method="post">
-            {% csrf_token %}
-            {{ form.non_field_errors }}
-            <div class="mb-3">
-                {{ form.name }}
-                {{ form.name.errors }}
-            </div>
-            <div class="mb-3">
-                {{ form.email }}
-                {{ form.email.errors }}
-            </div>
-            <div class="mb-2">
-                {{ form.message }}
-                {{ form.message.errors }}
-            </div>
-            <div class="form-group text-end">
-                <button type="submit" class="btn btn-primary">Send</button>
-            </div>
-        </form>
+      <form id="emailForm" method="post"> {% csrf_token %} {{ form.non_field_errors }}
+        <div class="mb-3">
+          {{ form.name }}
+          {{ form.name.errors }}
+        </div>
+        <div class="mb-3">
+          {{ form.email }}
+          {{ form.email.errors }}
+        </div>
+        <div class="mb-2">
+          {{ form.message }}
+          {{ form.message.errors }}
+        </div>
+        <div class="form-group text-end">
+          <button type="submit" class="btn btn-primary">Send</button>
+        </div>
+      </form>
     </div>
-</div>
-
-<!-- Success Message -->
-<div id="successMessage" style="display: none;" class="card text-center mt-4 col-10 col-md-4 mx-auto">
+  </div>
+  <!-- Success Message -->
+  <div id="successMessage" style="display: none;" class="card text-center mt-4 col-10 col-md-4 mx-auto">
     <div class="card-body">
-        <img src="{% static 'images/letter.webp' %}" alt="Success Submission Image Letter" class="img-fluid mb-3" id="success-image">
-        <h5 class="card-title fw-bold mb-3">Thank you for contacting us</h5>
-        <p class="card-text">We have received your message and will reply shortly.</p>
+      <img src="{% static 'images/letter.webp' %}" alt="Success Submission Image Letter" class="img-fluid mb-3"
+           id="success-image">
+      <h5 class="card-title fw-bold mb-3">Thank you for contacting us</h5>
+      <p class="card-text">We have received your message and will reply shortly.</p>
     </div>
-</div>
-
-
-{% endblock %}
-
-{% block script %}
-
-    <script src="{% static 'js/contact.js' %}"></script>
-
-{% endblock %}
+  </div> {% endblock %} {% block script %}
+  <script src="{% static 'js/contact.js' %}"></script> {% endblock %}
