--- a/authors/templates/user_profile_update.html
+++ b/authors/templates/user_profile_update.html
@@ -1,75 +1,46 @@
-{% extends "books/base.html" %}
-
-{% load static %}
-
-{% block content %}
-
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="card">
-        <div class="card-header">
-          <h2>Update {{user.username | capfirst }}'s Profile</h2>
-        </div>
-        <div class="card-body">
-
-          <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.non_field_errors }}
-            <div class="mb-3 text-center">
-              <!-- Display the current profile image  -->
-              {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
-                <img
-                  id="profileImagePreview"
-                  src="{{ user.userprofile.profile_image.url }}"
-                  alt="Profile Image"
-                  class="rounded-circle d-block mx-auto"
-                />
-              {% else %}
-                <img
-                  id="profileImagePreview"
-                  src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
-                  alt="Profile Image Default"
-                  class="rounded-circle d-block mx-auto"
-                />
-                {% endif %}
-            </div>
-            <div class="mb-3">
-              {{ form.email.label_tag}}
-              {{ form.email }}
-              {% for error in form.email.errors %}
-                <p class="text-danger">{{ error }}</p>
-              {% endfor %}
-            </div>
-            <div class="mb-2">
-              {{ form.new_password1 }}
-              {% for error in form.new_password1.errors %}
-                <p class="text-danger">{{ error }}</p>
-              {% endfor %}
-            </div>
-            <div class="mb-2">
-              {{ form.new_password2 }}
-              {% for error in form.new_password2.errors %}
-                <p class="text-danger">{{ error }}</p>
-              {% endfor %}
-            </div>
-            <div class="mb-2">
-              <!-- Display the form for changing the profile image -->
-              {{ form.profile_image.label_tag }}
-              {{ form.profile_image }}
-            </div>
-            <div class="container text-center">
-            <button type="submit" class="btn btn-primary">
-              Update Profile
-            </button>
-            <a href="{% url 'user_profile' %}" class="btn btn-danger">Cancel</a>
+{% extends "books/base.html" %} {% load static %} {% block content %}
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="card">
+          <div class="card-header">
+            <h2>Update {{ user.username | capfirst }}'s Profile</h2>
           </div>
-          </form>
+          <div class="card-body">
+            <form method="post" enctype="multipart/form-data"> {% csrf_token %} {{ form.non_field_errors }}
+              <div class="mb-3 text-center">
+                <!-- Display the current profile image  -->
+                {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
+                  <img id="profileImagePreview" src="{{ user.userprofile.profile_image.url }}" alt="Profile Image"
+                       class="rounded-circle d-block mx-auto"/> {% else %}
+                  <img id="profileImagePreview" src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
+                       alt="Profile Image Default" class="rounded-circle d-block mx-auto"/> {% endif %}
+              </div>
+              <div class="mb-3">
+                {{ form.email.label_tag }}
+                {{ form.email }} {% for error in form.email.errors %}
+                <p class="text-danger">{{ error }}</p> {% endfor %}
+              </div>
+              <div class="mb-2">
+                {{ form.new_password1 }} {% for error in form.new_password1.errors %}
+                <p class="text-danger">{{ error }}</p> {% endfor %}
+              </div>
+              <div class="mb-2">
+                {{ form.new_password2 }} {% for error in form.new_password2.errors %}
+                <p class="text-danger">{{ error }}</p> {% endfor %}
+              </div>
+              <div class="mb-2">
+                <!-- Display the form for changing the profile image -->
+                {{ form.profile_image.label_tag }}
+                {{ form.profile_image }}
+              </div>
+              <div class="container text-center">
+                <button type="submit" class="btn btn-primary"> Update Profile</button>
+                <a href="{% url 'user_profile' %}" class="btn btn-danger">Cancel</a>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-
-{% endblock %}
-
+  </div> {% endblock %}
