--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -1,217 +1,133 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Books for Life</title>
-    <meta name="author" content="Tomislav Dukez" />
-    <meta name="description" content="Explore book reviews on literature and life. Join our community of librophiles and discover your next favorite book." />
-    <meta name="keywords" content="books, life, literature, librophile, book reviews, Tomislav Dukez" />
-    <link rel="canonical" href="https://books-4-life-2d26bdf04dec.herokuapp.com/" />
-
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
-
-    <!-- Bootstrap 5.0.2 links -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    {% block head %} {% endblock %}
-  </head>
-
-  <body class="h-100 d-flex flex-column">
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Books for Life</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarColor01"
-          aria-controls="navbarColor01"
-          aria-expanded="true"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="navbarColor01" style="">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'find_book' %}">Find a Book</a>
-            </li>
-            {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav flex flex-column flex-lg-row mb-2 mb-lg-0 gap-1
-          ">
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'book_add' %}">Add Book</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link align-self-lg-center" href="{% url 'user_page' %}">My Books</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link align-self-lg-center" href="{% url 'user_favourites' %}">My Favourites</a>
-            </li>
-            <li class="nav-item align-self-lg-center d-inline-flex">
-              <a href="{% url 'user_profile' %}" class="text-info nav-link">
-                {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url%}
-                <img
-                  src="{{ user.userprofile.profile_image.url }}"
-                  id="profileImage"
-                  alt="Profile Image"
-                  class="rounded-circle mx-auto img-fluid d-inline me-2"
-                />
-                {% else %}
-                <img
-                  src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
-                  id="profileImage"
-                  alt="Profile Image Default"
-                  class="rounded-circle mx-auto img-fluid d-inline me-2"
-                />
-                {% endif %}
-              {{ user.username | capfirst }}</a>
-            </li>
-            <li class="nav-item mx-md-auto">
-              <a
-                class="nav-link btn btn-primary text-light px-md-1 align-self-lg-center"
-                href="{% url 'logout' %}"
-                >Logout</a
-              >
-            </li>
-            {% else %}
-            <li class="nav-item mx-md-auto">
-              <a
-                class="nav-link btn btn-primary text-light px-md-1 align-self-lg-center"
-                href="{% url 'login' %}"
-                >Login</a
-              >
-            </li>
-            <li class="nav-item mx-md-auto">
-              <a
-                class="nav-link btn btn-outline-secondary text-light px-md-1 align-self-lg-center"
-                href="{% url 'register' %}"
-                >Register</a
-              >
-            </li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- main -->
-    {% if messages %} {% for message in messages %}
-    <div class="alert alert-{{ message.extra_tags }} fade show" role="alert">
-      {{ message }}
-      <button
-        type="button"
-        class="btn-close btn-sm"
-        aria-label="Close"
-        data-bs-dismiss="alert"
-      ></button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Books for Life</title>
+  <meta name="author" content="Tomislav Dukez">
+  <meta name="description"
+        content="Explore book reviews on literature and life. Join our community of librophiles and discover your next favorite book.">
+  <meta name="keywords" content="books, life, literature, librophile, book reviews, Tomislav Dukez">
+  <link rel="canonical" href="https://books-4-life-2d26bdf04dec.herokuapp.com/">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
+  <!-- Bootstrap 5.0.2 links -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"> {% block head %} {% endblock %}
+</head>
+<body class="h-100 d-flex flex-column">
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'home' %}">Books for Life</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="navbarColor01" style="">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0"> {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'find_book' %}">Find a Book</a>
+        </li> {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav flex flex-column flex-lg-row mb-2 mb-lg-0 gap-1
+          "> {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'book_add' %}">Add Book</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link align-self-lg-center" href="{% url 'user_page' %}">My Books</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link align-self-lg-center" href="{% url 'user_favourites' %}">My Favourites</a>
+        </li>
+        <li class="nav-item align-self-lg-center d-inline-flex">
+          <a href="{% url 'user_profile' %}" class="text-info nav-link">
+            {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
+              <img src="{{ user.userprofile.profile_image.url }}" id="profileImage" alt="Profile Image"
+                   class="rounded-circle mx-auto img-fluid d-inline me-2"> {% else %}
+              <img src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp" id="profileImage"
+                   alt="Profile Image Default"
+                   class="rounded-circle mx-auto img-fluid d-inline me-2"> {% endif %} {{ user.username | capfirst }}
+          </a>
+        </li>
+        <li class="nav-item mx-md-auto">
+          <a class="nav-link btn btn-primary text-light px-md-1 align-self-lg-center"
+             href="{% url 'logout' %}">Logout</a>
+        </li> {% else %}
+        <li class="nav-item mx-md-auto">
+          <a class="nav-link btn btn-primary text-light px-md-1 align-self-lg-center" href="{% url 'login' %}">Login</a>
+        </li>
+        <li class="nav-item mx-md-auto">
+          <a class="nav-link btn btn-outline-secondary text-light px-md-1 align-self-lg-center"
+             href="{% url 'register' %}">Register</a>
+        </li> {% endif %}
+      </ul>
     </div>
-    {% endfor %} {% endif %} {% block content %} {% endblock %}
-
-    <!-- footer -->
-    <!-- code adapted from https://mdbootstrap.com/docs/standard/navigation/footer/ -->
-
-    <footer class="mt-auto text-center text-white">
-      <!-- Grid container -->
-      <div class="container p-lg-4 pb-0">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <!-- Facebook -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #3b5998"
-            href="https://www.facebook.com/profile.php?id=100013694132979"
-            target="_blank"
-            role="button"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-
-          <!-- X-Twitter -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #55acee"
-            href="https://twitter.com/tom_du3"
-            target="_blank"
-            role="button"
-            ><i class="fa-brands fa-x-twitter"></i
-          ></a>
-
-          <!-- Instagram -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #ac2bac"
-            href="https://www.instagram.com/007idkfa/"
-            target="_blank"
-            role="button"
-            ><i class="fab fa-instagram"></i
-          ></a>
-
-          <!-- Linkedin -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #0082ca"
-            href="https://www.linkedin.com/in/tomislav-dukez-bb2349231/"
-            target="_blank"
-            role="button"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-
-          <!-- Github -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #333333"
-            href="https://github.com/tomdu3/"
-            target="_blank"
-            role="button"
-            ><i class="fab fa-github"></i
-          ></a>
-        </section>
-      </div>
-
-      <!-- Copyright -->
-      <div
-        class="text-center p-3 text-dark"
-        style="background-color: rgba(0, 0, 0, 0.2)"
-      >
-        © 2023 Copyright:
-        <strong>Tomislav Dukez</strong>
-      </div>
-    </footer>
-      {% block script %}
-
-      {% endblock %} 
-    <script src="{% static 'js/script.js' %}"></script>
-  </body>
+  </div>
+</nav>
+<!-- main --> {% if messages %}{% for message in messages %}
+  <div class="alert alert-{{ message.extra_tags }} fade show" role="alert">
+    {{ message }}
+    <button type="button" class="btn-close btn-sm" aria-label="Close" data-bs-dismiss="alert"></button>
+  </div> {% endfor %} {% endif %} {% block content %} {% endblock %}
+<!-- footer -->
+<!-- code adapted from https://mdbootstrap.com/docs/standard/navigation/footer/ -->
+<footer class="mt-auto text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-lg-4 pb-0">
+    <!-- Section: Social media -->
+    <div class="mb-4">
+      <!-- Facebook -->
+      <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
+         href="https://www.facebook.com/profile.php?id=100013694132979" target="_blank" role="button">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <!-- X-Twitter -->
+      <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/tom_du3"
+         target="_blank" role="button">
+        <i class="fa-brands fa-x-twitter"></i>
+      </a>
+      <!-- Instagram -->
+      <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
+         href="https://www.instagram.com/007idkfa/" target="_blank" role="button">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <!-- Linkedin -->
+      <a class="btn text-white btn-floating m-1" style="background-color: #0082ca"
+         href="https://www.linkedin.com/in/tomislav-dukez-bb2349231/" target="_blank" role="button">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <!-- Github -->
+      <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/tomdu3/"
+         target="_blank" role="button">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+  </div>
+  <!-- Copyright -->
+  <div class="text-center p-3 text-dark" style="background-color: rgba(0, 0, 0, 0.2)"> © 2023 Copyright: <strong>Tomislav
+    Dukez</strong>
+  </div>
+</footer> {% block script %} {% endblock %}
+<script src="{% static 'js/script.js' %}"></script>
+</body>
 </html>
