--- a/books/templates/books/book_edit.html
+++ b/books/templates/books/book_edit.html
@@ -1,66 +1,55 @@
-{% extends "books/base.html" %}
-{% load static %}
-
-{% block content %}
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-header">
-          <h2 class="card-title">Edit Book</h2>
-        </div>
-        <div class="card-body">
-          {% if 'default' in book.image_url.url %}
-           <p class="text-center text-danger">No image</p>
-            {% else %}
-            <div class="d-flex justify-content-center align-items-center book-image mx-auto">
-              <img
-                  src="{{ book.image_url.url }}"
-                  class="card-img-top mx-auto"
-                  alt="{{ book.title }} image"
-              />
+{% extends "books/base.html" %} {% load static %} {% block content %}
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            <h2 class="card-title">Edit Book</h2>
           </div>
-          
-            {% endif %}
-          <div class="d-flex justify-content-center">
-          <form class="col-10" action="{% url 'book_edit' book.slug %}" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-              <label class="form-label" for="title">Title:</label>
-              <input type="text" class="form-control" id="title" name="title" value="{{ book.title }}" placeholder="Title (required)" required>
+          <div class="card-body"> {% if 'default' in book.image_url.url %}
+            <p class="text-center text-danger">No image</p> {% else %}
+            <div class="d-flex justify-content-center align-items-center book-image mx-auto">
+              <img src="{{ book.image_url.url }}" class="card-img-top mx-auto" alt="{{ book.title }} image"/>
+            </div> {% endif %}
+            <div class="d-flex justify-content-center">
+              <form class="col-10" action="{% url 'book_edit' book.slug %}" method="post"> {% csrf_token %}
+                <div class="form-group">
+                  <label class="form-label" for="title">Title:</label>
+                  <input type="text" class="form-control" id="title" name="title" value="{{ book.title }}"
+                         placeholder="Title (required)" required>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="author">Author:</label>
+                  <input type="text" class="form-control" id="author" name="author" value="{{ book.author }}"
+                         placeholder="Author (required)" required>
+                </div>
+                <div class="form-group">
+                  <label class="from-label" for="short_description">Short Description:</label>
+                  <textarea class="form-control" id="short_description" name="short_description" rows="3"
+                            placeholder="Short Description (required)" required>{{ book.short_description }}</textarea>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="full_description">Full Description:</label>
+                  <textarea class="form-control" id="full_description" name="full_description" rows="10"
+                            placeholder="Full Description (required)" required>{{ book.full_description }}</textarea>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="image_url">Image URL:</label>
+                  <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="category">Category:</label>
+                  <select class="form-select" id="category" name="category"> {% for category in categories %}
+                    <option value="{{ category.id }}" {% if book.category == category %}
+                            selected {% endif %}> {{ category.name }} </option> {% endfor %} </select>
+                </div>
+                <div class="form-group text-end">
+                  <button type="submit" class="btn btn-primary">Update Book</button>
+                </div>
+              </form>
             </div>
-            <div class="form-group">
-              <label class="form-label" for="author">Author:</label>
-              <input type="text" class="form-control" id="author" name="author" value="{{ book.author }}" placeholder="Author (required)" required>
-            </div>
-            <div class="form-group">
-              <label class="from-label" for="short_description">Short Description:</label>
-              <textarea class="form-control" id="short_description" name="short_description" rows="3" placeholder="Short Description (required)" required>{{ book.short_description }}</textarea>
-            </div>
-            <div class="form-group">
-              <label class="form-label" for="full_description">Full Description:</label>
-              <textarea class="form-control" id="full_description" name="full_description" rows="10" placeholder="Full Description (required)" required>{{ book.full_description }}</textarea>
-            </div>
-            <div class="form-group">
-              <label class="form-label" for="image_url">Image URL:</label>
-              <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
-            </div>
-            <div class="form-group">
-                <label class="form-label" for="category">Category:</label>
-                <select class="form-select" id="category" name="category">
-                  {% for category in categories %}
-                    <option value="{{ category.id }}"{% if book.category == category %} selected {% endif %} > {{ category.name }} </option>
-                  {% endfor %}
-                </select>
-              </div>
-            <div class="form-group text-end">
-              <button type="submit" class="btn btn-primary">Update Book</button>
-            </div>
-          </form>
-        </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-{% endblock %}
+  </div> {% endblock %}
