Fix Bug displaying full description field

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -44,7 +44,7 @@
       </div>
       <div class="row col-md-12">
         <div class="card-body">
-          <div class="card-text description">{{ book.full_description|safe }}</div>
+          <div class="card-text description">{{ book.full_description|safe|linebreaksbr }}</div>
         </div>
       </div>
     </div>
