--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -1,5 +1,5 @@
 {% extends 'books/base.html' %} {% load static %} {% block head %}
-  <link rel="stylesheet" href="{% static 'css/homepage.css' %}"/> {% endblock %} {% block content %}
+  <link rel="stylesheet" href="{% static 'css/homepage.css' %}"> {% endblock %} {% block content %}
   <!-- code "Flip Text Animation" adapted from https://alvarotrigo.com/blog/css-text-animations/-->
   <div class="container text-center pt-2 mx-auto">
     <div class="waviy pb-4">
@@ -25,7 +25,7 @@
         <div class="border-0">
           <div class="card-body">
             <div class="pb-3 d-none d-md-block">
-              <img src="{% static 'images/shakespeare.webp' %}" alt="shakespeare" class="rounded-circle home-image"/>
+              <img src="{% static 'images/shakespeare.webp' %}" alt="shakespeare" class="rounded-circle home-image">
             </div>
             <p class="card-text"> At Books for Life, we believe in the transformative power of books. Our mission is to
               inspire and guide you on a lifelong journey of learning, growth, and self-discovery through the magic of
@@ -46,7 +46,7 @@
                 <span>of literature!</span>
               </h5>
               <img class="home-image" src="https://web-photos-td.s3.eu-north-1.amazonaws.com/default_book.webp"
-                   alt="Image of a scolar writing a book"/>
+                   alt="Image of a scolar writing a book">
             </div>
           </div>
         </div>
