--- a/authors/templates/user_profile_update.html
+++ b/authors/templates/user_profile_update.html
@@ -12,9 +12,9 @@
                 <!-- Display the current profile image  -->
                 {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
                   <img id="profileImagePreview" src="{{ user.userprofile.profile_image.url }}" alt="Profile Image"
-                       class="rounded-circle d-block mx-auto"/> {% else %}
+                       class="rounded-circle d-block mx-auto"> {% else %}
                   <img id="profileImagePreview" src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
-                       alt="Profile Image Default" class="rounded-circle d-block mx-auto"/> {% endif %}
+                       alt="Profile Image Default" class="rounded-circle d-block mx-auto"> {% endif %}
               </div>
               <div class="mb-3">
                 {{ form.email.label_tag }}
